prevent image shifting on load

--- a/src/components/widget/Widget.scss
+++ b/src/components/widget/Widget.scss
@@ -32,6 +32,8 @@
     padding: 0.75rem;
     box-shadow: $neumorphSmallInvert;
     border-radius: 0.25rem;
+    width: 100%;
+    aspect-ratio: 16/9;
 
     img {
       display: block;
